Tue Aug 28 20:46:34 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/belkin-hid.c:
   - Fix memory leak in belkin_format_serial()
 * drivers/apc-hid.c:
   - A call to apc_format_model() could change the contents of the
     hd->Product string. This is undesireable.
 * drivers/mge-hid.c:
   - Cleaned up mge_format_model().
 * drivers/usbhid-ups.c:
   - The vendor-specific method for calculating human-readable
     strings for manufacturer, model, and serial are back in
     upsdrv_initinfo to make sure the above problems don't lead
     to problems in the future.

Mon Aug 27 18:33:37 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/usbhid.c:
   - Mental note: "close all source files *before* comitting, to
     prevent the one character that you modified from missing the
     commit."

Mon Aug 27 18:23:06 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/libhid.[ch],libshut.[ch],libusb.[ch]:
   - Cut the libshut and libusb objects loose from libhid. If no HID
     functions are used (megatec_usb, tripplite_usb), you no longer
     need to include libhid anymore. The USB matcher functions (which
     were not really HID specific functions) are now within libusb.
 * drivers/megatec_usb.c,tripplite_usb.c,Makefile.am:
   - Applied the change above.
 * drivers/usbhid.[ch]:
   - The HIDOpenDevice() and HIDCloseDevice() functions no longer
     exist. These are replaced by direct calls to the communication
     subdrivers.
   - The driver now gets a callback from libshut_open() and
     libusb_open() when a report descriptor has been retrieved from
     the USB/SHUT device and parses it and then makes a descision
     on whether this device is acceptable or not. If not, the next
     device that matches will be tried.

Sun Aug 26 09:20:45 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/libhid.[ch],libshut.c,libusb.c:
   - Added a callback function in the libshut_open and libusb_open